--- a/03 - Cabecalho_Footer_Variaveis-CSS/styles/style.css
+++ b/03 - Cabecalho_Footer_Variaveis-CSS/styles/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .cabecalho__menu__link {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
     color: var(--cor-terciaria);
     text-decoration: none;
@@ -51,7 +51,7 @@ body {
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 
@@ -60,14 +60,14 @@ body {
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .apresentacao__links {
@@ -86,7 +86,7 @@ body {
     width: 378px;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 21.5px 0;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
@@ -104,6 +104,6 @@ body {
     padding: 24px;
     text-align: center;
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
