--- a/04 - Responsividade e deploy/styles/style.css
+++ b/04 - Responsividade e deploy/styles/style.css
@@ -41,6 +41,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px; 
 }
 
 .apresentacao__conteudo {
@@ -110,4 +111,16 @@ body {
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 400;
+}
+
+@media (max-width: 1200px){
+    .cabecalho {
+        padding: 8%;   
+    }
+    .cabecalho__menu{
+        justify-content: center;
+    }
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
 }
